--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.157.0"
+    "three": "^0.157.0",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
