--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "simple-threejs-cad",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "eslint": "eslint .",
-    "prettier": "prettier . --write"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.55.0",
-    "prettier": "^3.1.1",
-    "typescript": "^5.2.2"
-  }
+    "name": "simple-threejs-cad",
+    "version": "1.0.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "eslint": "eslint .",
+        "prettier": "prettier . --write"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
+        "eslint": "^8.55.0",
+        "prettier": "^3.1.1",
+        "typescript": "^5.2.2"
+    }
 }
