--- a/packages/web_ui/package.json
+++ b/packages/web_ui/package.json
@@ -19,6 +19,7 @@
         "@vitejs/plugin-react": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
-        "vite": "^5.0.8"
+        "vite": "^5.0.8",
+        "vite-tsconfig-paths": "^4.2.3"
     }
 }
