--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -9,5 +9,8 @@
     },
     "devDependencies": {
         "esbuild": "^0.19.11"
+    },
+    "dependencies": {
+        "three": "^0.160.0"
     }
 }
