--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -8,6 +8,7 @@
         "build": "node esbuild.js && tsc"
     },
     "devDependencies": {
+        "@types/three": "^0.160.0",
         "esbuild": "^0.19.11"
     },
     "dependencies": {
