--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -12,6 +12,7 @@
         "esModuleInterop": true,
         "skipDefaultLibCheck": true,
         "skipLibCheck": true,
+        "strictPropertyInitialization": false,
         "paths": {
             "@src/*": ["./src/*"]
         }
