--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,14 +1,15 @@
 {
     "name": "sdk",
     "version": "1.0.0",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
     "type": "module",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "scripts": {
-        "build": "node esbuild.js && tsc"
+        "build": "node esbuild.js && dts-bundle-generator src/index.ts --out-file dist/index.d.ts --no-check"
     },
     "devDependencies": {
         "@types/three": "^0.160.0",
+        "dts-bundle-generator": "^9.2.1",
         "esbuild": "^0.19.11"
     },
     "dependencies": {
