--- a/packages/web_ui/tsconfig.json
+++ b/packages/web_ui/tsconfig.json
@@ -8,22 +8,15 @@
 
         /* Bundler mode */
         "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
 
-        /* Linting */
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true,
-
         "paths": {
             "@src/*": ["./src/*"]
         }
     },
-    "include": ["src"],
+    "include": ["./src", "**/src"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
