👏 esbuild watch mode

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -5,9 +5,11 @@
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "scripts": {
-        "build": "node esbuild.js && dts-bundle-generator src/index.ts --out-file dist/index.d.ts --no-check"
+        "dev":"node esbuild.js --dev",
+        "build": "node esbuild.js --build"
     },
     "devDependencies": {
+        "@types/node": "^20.10.8",
         "@types/three": "^0.160.0",
         "dts-bundle-generator": "^9.2.1",
         "esbuild": "^0.19.11"
