--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -7,6 +7,7 @@
         "declaration": true,
         "emitDeclarationOnly": true,
         "strictPropertyInitialization": false,
+        "allowJs": true,
         "paths": {
             "@src/*": ["./src/*"]
         }
