--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -7,7 +7,8 @@
         "declaration": true,
         "emitDeclarationOnly": true,
         "strictPropertyInitialization": false,
-        "allowJs": true,
+        "strict": true,
+        "strictNullChecks": true,
         "paths": {
             "@src/*": ["./src/*"]
         }
