--- a/packages/web_ui/package.json
+++ b/packages/web_ui/package.json
@@ -12,7 +12,8 @@
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sdk": "workspace:*"
+        "sdk": "workspace:*",
+        "zustand": "^4.4.7"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
