--- a/packages/web_ui/tsconfig.json
+++ b/packages/web_ui/tsconfig.json
@@ -13,6 +13,12 @@
         "noEmit": true,
         "jsx": "react-jsx",
 
+        /* Linting */
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+
         "paths": {
             "@src/*": ["./src/*"]
         }
