--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@typescript-eslint/parser": "^6.14.0",
         "eslint": "^8.55.0",
         "prettier": "^3.1.1",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.1.3"
     }
 }
