--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "simple-threejs-cad",
-    "version": "1.0.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "eslint": "eslint ./packages --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "prettier": "prettier . --write"
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
-        "eslint": "^8.55.0",
-        "prettier": "^3.1.1",
-        "typescript": "^5.3.3",
-        "vitest": "^1.1.3"
-    }
+  "name": "simple-threejs-cad",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "eslint": "eslint ./packages --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prettier": "prettier . --write"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.3"
+  }
 }
