--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
   "tasks": [
     {
       "label": "dev_build",
-      "dependsOn":["dev_dts", "dev_esbuild"],
+      "dependsOn":["dev_dts", "dev_esbuild", "dev_web"],
       "group": {
         "kind": "build",
         "isDefault": true
@@ -28,6 +28,16 @@
         "group": "dev"
       },
       "hide": true
-    }
+    },
+    {
+      "label": "dev_web",
+      "path": "packages/web_ui",
+      "type": "npm",
+      "script": "vite",
+      "presentation": {
+        "group": "dev"
+      },
+      "hide": true
+    },
   ]
 }
