--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
     "vitest": "^1.1.3"
+  },
+  "dependencies": {
+    "zustand": "^4.4.7"
   }
 }
