--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -6,12 +6,12 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "vitest run",
-    "dev_esbuild": "esbuild src/export.ts --format=esm --bundle --packages=external --outfile=dist/index.js --sourcemap --watch",
+    "dev_esbuild": "esbuild src/index.ts --format=esm --bundle --packages=external --outfile=dist/index.js --sourcemap --watch",
     "dev_dts": "tspc --watch",
     "prod_build": "npm run prod_before && npm run prod_esbuild && npm run prod_dts",
     "prod_before": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
-    "prod_esbuild": "esbuild src/export.ts --format=esm --bundle --packages=external --outfile=dist/index.js --tree-shaking=true --analyze",
-    "prod_dts": "dts-bundle-generator src/export.ts --out-file=dist/index.d.ts"
+    "prod_esbuild": "esbuild src/index.ts --format=esm --bundle --packages=external --outfile=dist/index.js --tree-shaking=true --analyze",
+    "prod_dts": "dts-bundle-generator src/index.ts --out-file=dist/index.d.ts"
   },
   "devDependencies": {
     "@types/three": "^0.160.0",
