--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-threejs-cad",
+  "name": "tiny_threejs_sketcher",
   "version": "1.0.0",
   "private": true,
   "type": "module",
