--- a/packages/web_ui/package.json
+++ b/packages/web_ui/package.json
@@ -14,7 +14,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sdk": "workspace:*",
+    "tiny_threejs_sketcher": "workspace:*",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
