--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
     "vitest": "^1.1.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "is-core-module": "npm:@nolyfill/is-core-module@^1"
+    }
   }
 }
