--- a/packages/tiny_threejs_sketcher/package.json
+++ b/packages/tiny_threejs_sketcher/package.json
@@ -14,6 +14,7 @@
     "prod_dts": "dts-bundle-generator src/index.ts --out-file=dist/index.d.ts"
   },
   "devDependencies": {
+    "@types/geometric": "^2.5.3",
     "@types/three": "^0.160.0",
     "dts-bundle-generator": "^9.2.1",
     "esbuild": "^0.19.11",
@@ -21,6 +22,7 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "geometric": "^2.5.4",
     "mitt": "^3.0.1",
     "three": "^0.160.0"
   }
