--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "eslint": "eslint ./packages --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "prettier": "prettier . --write"
+    "format": "eslint ./packages --fix"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "vitest": "^1.1.3"
+    "@eslint/js": "^9.12.0",
+    "@stylistic/eslint-plugin": "^2.9.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react-hooks": "5",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.8.1",
+    "vitest": "^2.1.3"
   },
   "pnpm": {
     "overrides": {
