--- a/package.json
+++ b/package.json
@@ -7,14 +7,9 @@
     "format": "eslint ./packages --fix"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@stylistic/eslint-plugin": "^2.9.0",
-    "@types/eslint__js": "^8.42.3",
     "eslint": "^9.12.0",
-    "eslint-plugin-react-hooks": "5",
-    "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-config-xiaohj": "^1.0.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.8.1",
     "vitest": "^2.1.3"
   },
   "pnpm": {
