😛 update eslint config

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "tiny_threejs_sketcher",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
+  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
   "scripts": {
-    "format": "eslint ./packages --fix"
+    "format": "eslint . --fix"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.12.1",
+    "@eslint-react/eslint-plugin": "^1.22.1",
     "eslint": "^9.12.0",
     "eslint-config-xiaohj": "^1.0.0",
     "typescript": "5.5.x",
@@ -16,6 +19,5 @@
     "overrides": {
       "is-core-module": "npm:@nolyfill/is-core-module@^1"
     }
-  },
-  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
+  }
 }
